Ampliando o texto sobre formula de Lagrange

--- a/5. INTERPOLACAO/5.1_interpolacao_polinomial.ipynb
+++ b/5. INTERPOLACAO/5.1_interpolacao_polinomial.ipynb
@@ -36,19 +36,19 @@
     "$$\n",
     "\\psi(x)= \\prod_{i=1}^n (x-x_i)\n",
     "$$\n",
-    "com $\\xi \\in[x_ 0, x_ n]$\n",
+    "com $\\xi \\in[x_ 0, x_ n]$.\n",
     "\n",
     "### Um limitante superior para o erro\n",
     "\n",
     "Como $\\xi$, na fórmula para o erro, não é conhecido, não podemos calcular o valor exato do erro, mas podemos obter uma estimativa, fazendo\n",
     "\n",
     "$$\n",
-    "E(\\overline x) =  \\frac{|\\psi(x)|}{(n+1)!}  M\n",
+    "E(\\overline x) =  \\frac{\\left| \\psi(x) \\right|}{(n+1)!}  M\n",
     "$$\n",
     "\n",
     "onde \n",
     "\n",
-    "$$M = máx. \\{  \\left|f^{(n+1)}(\\xi)\\right|, x \\in [x_0, x_1] \\} $$.\n"
+    "$$M = máx \\{  \\left|f^{(n+1)}(x)\\right|, x \\in [x_0, x_1] \\} $$.\n"
    ]
   },
   {
