--- a/5_INTERPOLACAO/5.0_interpolacao_introducao.ipynb
+++ b/5_INTERPOLACAO/5.0_interpolacao_introducao.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "com  $i = 0,1,...,n$, ou seja, encontrar uma função que \"passe\" por todos esses pontos.\n",
     "\n",
-    "![funcao_interpoladora.png](http://localhost:8889/files/NUMETHODS/5_INTERPOLACAO/imagens/funcao_interpoladora.png)\n",
+    "![funcao_interpoladora.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/5_INTERPOLACAO/imagens/funcao_interpoladora.png)\n",
     "\n",
     "\n",
     "O caso mais simples de interpolação que podemos citar é o de encontrar a reta (função afim) que passa por dois pontos. \n",
