--- a/5_INTERPOLACAO/5.1_interpolacao_polinomial.ipynb
+++ b/5_INTERPOLACAO/5.1_interpolacao_polinomial.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "com  $i = 0,1,...,n$.\n",
     "\n",
-    "![Image of Yaktocat](https://github.com/tiagoburiol/NUMETHODS/raw/master/5.%20INTERPOLACAO/imagens/polinomio_interpolador.png)\n",
+    "![Image of Yaktocat](https://github.com/tiagoburiol/NUMETHODS/raw/master/5_INTERPOLACAO/imagens/polinomio_interpolador.png)\n",
     "\n",
     "OBS: Dada $f(x)$ definida em $x_0, x_1,...,x_n$, (n+1) pontos distintos de um intervalo $[a,b]$, existe um único polinômio de grau $\\leq n$ tal que $P(x_i)=f(x_i)=y_i$, com  $i = 0,1,...,n$.\n",
     "\n",
