--- a/5_INTERPOLACAO/5.1_interpolacao_polinomial.ipynb
+++ b/5_INTERPOLACAO/5.1_interpolacao_polinomial.ipynb
@@ -23,7 +23,7 @@
     "$$ E(\\overline x) = f(\\overline x) - P(\\overline x) $$\n",
     "\n",
     "Graficamente, tem-se\n",
-    "![Image of Yaktocat](https://github.com/tiagoburiol/NUMETHODS/raw/master/5.%20INTERPOLACAO/imagens/erro_na_interpolacao.png)\n",
+    "![Image of Yaktocat](https://github.com/tiagoburiol/NUMETHODS/raw/master/5_INTERPOLACAO/imagens/erro_na_interpolacao.png)\n",
     "\n",
     "**Teorema:** Seja $f(x)$ definida e (n+1) vezes diferenciável em $[a,b]$ então o erro $E(x)$ é dado por \n",
     "\n",
