--- a/5_INTERPOLACAO/5.1_interpolacao_polinomial.ipynb
+++ b/5_INTERPOLACAO/5.1_interpolacao_polinomial.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "onde \n",
     "\n",
-    "$$M = máx \\{  \\left|f^{(n+1)}(x)\\right|, x \\in [x_0, x_1] \\} $$.\n"
+    "$$M = max \\{  \\left|f^{(n+1)}(x)\\right|, x \\in [x_0, x_1] \\} $$.\n"
    ]
   },
   {
