--- a/3_ZEROS_DE_FUNCOES/3.3_metodo_da_bissecao.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.3_metodo_da_bissecao.ipynb
@@ -68,6 +68,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 0.5500 | Erro = 1.0000\n",
+      "x = 0.7750 | Erro = 0.2903\n",
+      "x = 0.6625 | Erro = 0.1698\n",
+      "x = 0.6063 | Erro = 0.0928\n",
+      "x = 0.6344 | Erro = 0.0443\n",
+      "x = 0.6484 | Erro = 0.0217\n",
+      "x = 0.6555 | Erro = 0.0107\n",
+      "x = 0.6520 | Erro = 0.0054\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "a = 0.1; b = 1.0; err = 10.0; x_ant = 0.0\n",
+    "\n",
+    "f = lambda x: x**2 + math.log(x)\n",
+    "\n",
+    "while err > 0.01:\n",
+    "    x = (a+b)/2.0\n",
+    "    if f(x)*f(a) < 0:\n",
+    "        b = x\n",
+    "    else:\n",
+    "        a = x\n",
+    "    err = abs(x - x_ant)/abs(x)\n",
+    "    x_ant = x\n",
+    "    print (\"x = %.4f\"%x,\"| Erro = %.4f\"% err)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
