--- a/7_INTEGRACAO_NUMERICA/7.2_regra_dos_trapezios.ipynb
+++ b/7_INTEGRACAO_NUMERICA/7.2_regra_dos_trapezios.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -85,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.   1.5  2.   2.5  3.   3.5  4. ]\n",
-      "Resultado Trapézio:  4.6614883824\n"
+      "[ 1.     1.003  1.006 ...,  3.994  3.997  4.   ]\n",
+      "Resultado Trapézio:  4.66666647917\n"
      ]
     }
    ],
@@ -94,8 +94,8 @@
     "import numpy as np\n",
     "# Dados do enunciado\n",
     "x0 = 1.0\n",
-    "xn = 4.0\n",
-    "n = 6     # nº de subintervalos\n",
+    "xn = 4.0 \n",
+    "n = 1000    # nº de subintervalos\n",
     "\n",
     "h = (xn-x0)/n\n",
     "f = lambda x: np.sqrt(x)\n",
@@ -105,7 +105,7 @@
     "print (X)\n",
     "\n",
     "# Regra dos trapézios usando funções do numpy\n",
-    "It = (h/2)*(f(X[0]) + 2*np.sum(f(X[1:n:1])) + f(X[-1]))\n",
+    "It = (h/2)*(f(X[0]) + 2*np.sum(f(X[1:n])) + f(X[-1]))\n",
     "print (\"Resultado Trapézio: \", It)"
    ]
   },
@@ -116,7 +116,26 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
