--- a/7_INTEGRACAO_NUMERICA/7.4_regras_de_simpson.ipynb
+++ b/7_INTEGRACAO_NUMERICA/7.4_regras_de_simpson.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7.2 Regra 1/3 de Simpson \n",
+    "# 7.2 Regras de Simpson \n",
+    "\n",
+    "## Regra 1/3 de Simpson\n",
     "\n",
     "Considere uma função $f(x)$ definida em três pontos distintos $x_0$, $x_1$ e $x_2$ equidistantes no intervalo $[a,b]$. O polinômio de Lagrange para esses pontos, considerando a mudança de variável $u = \\frac{x-x_0}{h}$ é dado por\n",
     "\n",
@@ -35,11 +37,11 @@
     "\n",
     "### Erro na regra 1/3 de Simpson\n",
     "\n",
-    "O erro na regra dos trapézios será dado por\n",
+    "O erro na regra 1/3 de Simpson será dado por\n",
     "\n",
     "$$E_2 = \\frac{-h^5}{90}f^{(4)}(\\xi)$$\n",
     "\n",
-    "com $x_0 \\leq \\xi \\leq x_1$.\n",
+    "com $x_0 \\leq \\xi \\leq x_2$.\n",
     "\n",
     "Um **limitante superior** para o erro será dado por \n",
     "\n",
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Erro na regra 1/3 de Simpson generalizada\n",
+    "## Regra 1/3 de Simpson generalizada\n",
     "Consiste em subdividirmos o intervalo de integração $[a,b]$ em $n$ subintervalos de ampliture $h$, que que $n$ é um número par de subintervalos, com $x_0=a$ e $x_n=b$, então, aplicando a regra 1/3 de Simpson a cada 2 subintervalos consecutivos, obtemos\n",
     "\n",
     "$$ \\int_{x_0}^{x_n} f(x) dx \\approx \\frac{h}{3} [f(x_0)+4f(x_1)+f(x_2)] + \\frac{h}{3} [f(x_2)+4f(x_3)+f(x_4)] + ... + \\frac{h}{3} [f(x_{n-2})+4f(x_{n-1})+f(x_n)]=$$\n",
@@ -105,7 +107,109 @@
     "\n",
     "Graficamente, tem-se\n",
     "\n",
-    "![Simpson13gen.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/Simpson13gen.jpg)\n"
+    "![Simpson13gen.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/Simpson13gen.jpg)\n",
+    "\n",
+    "### Erro na regra 1/3 de Simpson generalizada\n",
+    "O erro na regra 1/3 de Simpson generalizada será dado por\n",
+    "\n",
+    "$$E_2 = \\frac{-h^4}{180}(n_n-x_0)f^{(4)}(\\xi)$$\n",
+    "\n",
+    "com $x_0 \\leq \\xi \\leq x_n$.\n",
+    "\n",
+    "Um **limitante superior** para o erro será dado por \n",
+    "\n",
+    "$$ |E_2| \\leq \\frac{h^4}{180}(x_n-x_0)  \\,\\, max.\\left\\{\\left|f^{(4)}(x)\\right|, x_0 \\leq \\xi \\leq x_n  \\right\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Exemplo 2\n",
+    "Calcule o valor aproximado da integral $\\int_0^3(xe^x+1)dx$ usando a regra 1/3 de Simpson para 2, 4 e 6 subintervalos e um limitante superior para o erro."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xi   = [ 0.   0.5  1.   1.5  2.   2.5  3. ]\n",
+      "f(xi)= [  1.       1.8244   3.7183   7.7225  15.7781  31.4562  61.2566]\n",
+      "I = 44.2103192321\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Dados do enunciado\n",
+    "x0 = 0.0; xn = 3.0\n",
+    "n = 6\n",
+    "h = (xn-x0)/n\n",
+    "f = lambda x: x*np.exp(x)+1\n",
+    "\n",
+    "# Criando n+1 pontos igualmente espacados \n",
+    "X = np.linspace(x0, xn, n+1)\n",
+    "print (\"xi   =\",np.round(X,4))\n",
+    "print (\"f(xi)=\",np.round(f(X),4))\n",
+    "\n",
+    "\n",
+    "# Regra 1/3 de Simpson usando funções do numpy\n",
+    "I = (h/3)*(f(X[0]) + 4*np.sum(f(X[1:n:2])) + 2*np.sum(f(X[2:n:2]))+ f(X[-1]))\n",
+    "print (\"I =\",I)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regra 3/8 de Simpson\n",
+    "\n",
+    "\n",
+    "Considere uma função $f(x)$ definida em quatro pontos distintos $x_0$, $x_1$, $x_2$ e $x_3$ equidistantes no intervalo $[a,b]$. O polinômio interpolador de Lagrange para esses pontos, considerando a mudança de variável $u = \\frac{x-x_0}{h}$ é dado por\n",
+    "\n",
+    "$$P_3(u)=f(x_0) \\left[ \\frac{(u-1)(u-2)(u-3)}{-6}\\right] + f(x_1) \\left[ \\frac{u(u-2)(u-3)}{2} \\right] + f(x_2) \\left[\n",
+    "\\frac{u(u-1)(u-3)}{-2}\\right]+ f(x_3)\\left[ \\frac{u(u-1)(u-2)}{6}  \\right]$$\n",
+    "\n",
+    "ou\n",
+    "\n",
+    "$$P_3(u)=f(x_0) \\left[ \\frac{u^3-6u^2+11u-6}{-6}\\right] + f(x_1) \\left[ \\frac{u^3-5u^2+6u}{2} \\right] + f(x_2) \\left[ \\frac{u^3-4u^2+3u}{-2}\\right]  + f(x_3)\\left[ \\frac{u^3-5u^2+6u}{6}  \\right]$$\n",
+    "\n",
+    "O que fornece\n",
+    "\n",
+    "$$ \\int_{x_0}^{x_3} f(x) dx \\approx  h \\int_{0}^{3} P_3(u) du = \\frac{3}{8}h \\left[f(x_0)+3f(x_1)+3f(f_2)+f(x_3) \\right]$$\n",
+    "\n",
+    "Então\n",
+    "\n",
+    " \n",
+    "\n",
+    "$$\\int_{x_0}^{x_3} f(x) dx \\approx \\frac{3}{8}h \\left[f(x_0)+3f(x_1)+3f(x_2)+f(x_3) \\right]$$\n",
+    "\n",
+    "conhecida como **Regra 3/8 de Simpson**.\n",
+    "\n",
+    "\n",
+    "Graficamente, tem-se\n",
+    "![Simpson13.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/Simpson38.jpg)\n",
+    "\n",
+    "### Erro na regra 3/8 de Simpson\n",
+    "\n",
+    "O erro na regra 3/8 de Simpson será dado por\n",
+    "\n",
+    "$$E_3 = \\frac{3h^5}{80}f^{(4)}(\\xi)$$\n",
+    "\n",
+    "com $x_0 \\leq \\xi \\leq x_3$.\n",
+    "\n",
+    "Um **limitante superior** para o erro será dado por \n",
+    "\n",
+    "$$ |E_3| \\leq \\frac{3h^5}{80} max.\\{|f^{(4)}(x)|, x_0 \\leq \\xi \\leq x_3 \\}$$"
    ]
   },
   {
@@ -115,9 +219,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "Gra"
-   ]
+   "source": []
   }
  ],
  "metadata": {
