--- a/7_INTEGRACAO_NUMERICA/7.4_regras_de_simpson.ipynb
+++ b/7_INTEGRACAO_NUMERICA/7.4_regras_de_simpson.ipynb
@@ -213,6 +213,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado:  15.3355649483\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Dados do enunciado\n",
+    "x0 = 1.0\n",
+    "xn = 7.0\n",
+    "n = 9\n",
+    "h = (xn-x0)/n\n",
+    "f = lambda x: np.log(x+9)\n",
+    "\n",
+    "# Criando n+1 pontos igualmente espacados \n",
+    "X = np.linspace(x0, xn, n+1)\n",
+    "\n",
+    "# Regra 3/8 de Simpson usando funções do numpy\n",
+    "I = (3*h/8)*(f(X[0]) + 3*np.sum(f(X[1:n:3])+f(X[2:n:3])) + 2*np.sum(f(X[3:n:3]))+ f(X[-1]))\n",
+    "\n",
+    "print (\"Resultado: \", I)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
