--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -4,7 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemplo: Gauss-Siedel"
+    "# Métodos Iterativos\n",
+    "\n",
+    "## Método de Jacobi-Richardson\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 1.0\n",
+      "0.5 1.5\n",
+      "0.25 1.25\n",
+      "0.375 1.125\n",
+      "0.4375 1.1875\n",
+      "0.40625 1.21875\n",
+      "0.390625 1.203125\n",
+      "0.3984375 1.1953125\n",
+      "0.40234375 1.19921875\n",
+      "0.400390625 1.201171875\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "(x1,x2) = (0,0)\n",
+    "\n",
+    "f = lambda x1,x2: (1-0.5*x2, 1+0.5*x1)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    (x1,x2) = f(x1, x2)\n",
+    "    print (x1,x2)\n"
    ]
   },
   {
