--- a/7_INTEGRACAO_NUMERICA/7.4_regras_de_simpson.ipynb
+++ b/7_INTEGRACAO_NUMERICA/7.4_regras_de_simpson.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -142,9 +142,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xi   = [ 0.   0.5  1.   1.5  2.   2.5  3. ]\n",
-      "f(xi)= [  1.       1.8244   3.7183   7.7225  15.7781  31.4562  61.2566]\n",
-      "I = 44.2103192321\n"
+      "xi   = [ 0.    0.75  1.5   2.25  3.  ]\n",
+      "f(xi)= [  1.           2.58775001   7.72253361  22.34740563  61.25661077]\n",
+      "I = 44.3605751394\n"
      ]
     }
    ],
@@ -152,14 +152,14 @@
     "import numpy as np\n",
     "# Dados do enunciado\n",
     "x0 = 0.0; xn = 3.0\n",
-    "n = 6\n",
+    "n = 4\n",
     "h = (xn-x0)/n\n",
     "f = lambda x: x*np.exp(x)+1\n",
     "\n",
     "# Criando n+1 pontos igualmente espacados \n",
     "X = np.linspace(x0, xn, n+1)\n",
     "print (\"xi   =\",np.round(X,4))\n",
-    "print (\"f(xi)=\",np.round(f(X),4))\n",
+    "print (\"f(xi)=\",f(X))\n",
     "\n",
     "\n",
     "# Regra 1/3 de Simpson usando funções do numpy\n",
@@ -221,7 +221,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado:  15.3355503338\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Dados do enunciado\n",
+    "x0 = 1.0\n",
+    "xn = 7.0\n",
+    "n = 6\n",
+    "h = (xn-x0)/n\n",
+    "f = lambda x: np.log(x+9)\n",
+    "\n",
+    "# Criando n+1 pontos igualmente espacados \n",
+    "X = np.linspace(x0, xn, n+1)\n",
+    "\n",
+    "# Regra 3/8 de Simpson usando funções do numpy\n",
+    "I = (3*h/8)*(f(X[0]) + 3*np.sum(f(X[1:n:3])+f(X[2:n:3])) + 2*np.sum(f(X[3:n:3]))+ f(X[-1]))\n",
+    "\n",
+    "print (\"Resultado: \", I)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Regra 3/8 de Simpson generalizada\n",
+    "Consiste em subdividirmos o intervalo de integração $[a,b]$ em $n$ subintervalos de ampliture $h$, que que $n$ é um número múltiplo de 3, com $x_0=a$ e $x_n=b$, então, aplicando a regra 3/8 de Simpson a cada 3 subintervalos consecutivos, obtemos\n",
+    "\n",
+    "$$ \\int_{x_0}^{x_n} f(x) dx \\approx \\frac{3}{8}h \\left[\n",
+    "f(x_0) + 3f(x_1)+3f(x_2)+f(x_3) \\right] +\n",
+    "\\frac{3}{8}h \\left[f(x_3)+3f(x_4)+3f(x_5)+f(x_6) \\right] + \n",
+    "... + \\frac{3}{8}h \\left[f(x_{n-3})+3f(x_{n-2})+3f(x_{n-1})+f(x_n) \\right]$$\n",
+    "\n",
+    "\n",
+    "$$ = \\frac{3}{8}h \\left\\{ f(x_0) +\n",
+    "3 \\left[f(x_1)+f(x_2)+f(x_4)+f(x_5)+....+ f(x_{n-2})+f(x_{n-1})\\right] +\n",
+    "2 \\left[f(x_3)+f(x_6)+....+f(x_{n-3}) \\right] \\right\\}$$\n",
+    "\n",
+    "conhecida como **Regra 3/8 de Simpson Generalizada**.\n",
+    "\n",
+    "Graficamente, tem-se\n",
+    "\n",
+    "![Simpson38gen.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/7_INTEGRACAO_NUMERICA/imagens/Simpson38gen.jpg)\n",
+    "\n",
+    "### Erro na regra 3/8 de Simpson generalizada\n",
+    "O erro na regra 1/3 de Simpson generalizada será dado por\n",
+    "\n",
+    "$$E_3 = \\frac{-h^4}{80}(n_n-x_0)f^{(4)}(\\xi)$$\n",
+    "\n",
+    "com $x_0 \\leq \\xi \\leq x_n$.\n",
+    "\n",
+    "Um **limitante superior** para o erro será dado por \n",
+    "\n",
+    "$$ |E_3| \\leq \\frac{h^4}{80}(x_n-x_0)  \\,\\, max.\\left\\{\\left|f^{(4)}(x)\\right|, x_0 \\leq \\xi \\leq x_n  \\right\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
