--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -12,7 +12,40 @@
     "2. construção de um modelo matemático que represente o problema;\n",
     "3. a resolução do modelo matemático por métodos numéricos ou analíticos.\n",
     "\n",
-    "As duas primeiras etapas consistem na **fase de modelagem** e a terceira é a **fase de resolução**. Tanto na fase de modelagem quanto na fase de resolução podem ocorrer erros, mesmo que esses erros não tornem a resposta obtida inválida ou inutilizável. "
+    "As duas primeiras etapas consistem na **fase de modelagem** e a terceira é a **fase de resolução**. Tanto na fase de modelagem quanto na fase de resolução podem ocorrer erros, mesmo que esses erros não tornem a resposta obtida inválida ou inútil. \n",
+    "\n",
+    "Os erros na fase de modelagem podem ser decorrentes de medições imprecisas, erros de anotação, simplificações e deduções equivocadas. Os erros na fase de resolução ocorrem devido a erros de cálculo, escolha de um método ineficiente, aproximações ou processamento numérico. Dizemos que métodos analíticos de resolução geram soluções exatas e métodos numéricos geram soluções aproximadas. \n",
+    "\n",
+    "Nem sempre é fácil ou possível obter a solução analítica de um modelo matemático, ainda que simples, por exemplo:\n",
+    "\n",
+    "1. $$x^3-30x+2552=0 $$ <br>\n",
+    "\n",
+    "2. $$cos(x)=x $$ <br>\n",
+    "\n",
+    "3. $$xe^x=10 $$ <br>\n",
+    "\n",
+    "4. $$\\begin{cases} y'+xy = e^{-y}\\\\\n",
+    "                    y(0) =2\n",
+    "                    \\end{cases} $$ <br>\n",
+    "          \n",
+    "5. $$ \\int^2_1 e^{-x^2} dx $$ <br>\n",
+    "\n",
+    "A maioria dos problemas envolvendo fenômenos reais produzem modelos matemáticos cuja solução analítica é difícil (ou impossível) de obter, mesmo quando provamos que a solução existe. Nesses casos usamos **métodos numéricos**, os quais fornecem **soluções aproximadas**, que apesar de, em geral, serem diferentes da solução exata, podem ser suficientemete próximas para que sejam úteis em aplicações práticas.  \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### EXEMPLO ###\n",
+    "Uma esfera de madeira (densidade relativa $\\mu_e =0,638$ e raio $r=10 cm$) é colocada a flutuar sobre a água (densidade relativa $\\mu=1$), conforme figura. Qual é a altura $d$ da esfera que ficará submersa? \n",
+    "\n",
+    "![esfera.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/images/esfera.png)\n"
    ]
   },
   {
