--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -45,7 +45,154 @@
     "### EXEMPLO ###\n",
     "Uma esfera de madeira (densidade relativa $\\mu_e =0,638$ e raio $r=10 cm$) é colocada a flutuar sobre a água (densidade relativa $\\mu=1$), conforme figura. Qual é a altura $d$ da esfera que ficará submersa? \n",
     "\n",
-    "![esfera.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/images/esfera.png)\n"
+    "![esfera.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/imagens/esfera.png\n",
+    ")\n",
+    "\n",
+    "### Solução###\n",
+    "Inicialmente, observemos que, pelo *Princípio de Arquimedes* o peso da esfera deve ser equilibrado com o peso do volume de água deslocada \n",
+    "\n",
+    "$$ M_e g = M_a g $$\n",
+    "\n",
+    "$$ \\mu_e \\frac{4 \\pi r^3}{3} = \\mu_a \\int_0^d \\pi \\left[r^2-(x-r)^2) \\right]dx $$\n",
+    "\n",
+    "$$ \\mu_e \\frac{4 \\pi r^3}{3} = \\mu_a \\frac{\\pi d^2 (3r-d)}{3}$$\n",
+    "\n",
+    "$$ 4 \\mu_e r^3 = \\mu_a d^2 (3r-d)$$\n",
+    "\n",
+    "substituindo os valores obtemos \n",
+    "\n",
+    "$$ d^3-30d^2+2552=0$$.\n",
+    "\n",
+    "A solução analítica para esse problema pode ser encontrada mas é um tanto complicada. No entanto, com uma rotina podemos encontrar uma aproximação numericamente. \n",
+    "\n",
+    "Sabemos que a solução é um numero entre 0 e 20, então calculamos os valores da função $ f(d) = d^3-30d^2+2552 $ para valores entre 0 e 20 obtendo:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2552\n",
+      "1 2523\n",
+      "2 2440\n",
+      "3 2309\n",
+      "4 2136\n",
+      "5 1927\n",
+      "6 1688\n",
+      "7 1425\n",
+      "8 1144\n",
+      "9 851\n",
+      "10 552\n",
+      "11 253\n",
+      "12 -40\n",
+      "13 -321\n",
+      "14 -584\n",
+      "15 -823\n",
+      "16 -1032\n",
+      "17 -1205\n",
+      "18 -1336\n",
+      "19 -1419\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in range(20):\n",
+    "    print (d, d**3-30*d**2+2552)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observemos que a função moda de sinal entre $d=11$ e $d=12$, então podemos refinar a aproximação gerando alguns valores entre 11 e 12."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.0 253.0\n",
+      "11.1 223.33100000000013\n",
+      "11.2 193.72800000000007\n",
+      "11.3 164.19700000000012\n",
+      "11.4 134.7439999999997\n",
+      "11.5 105.375\n",
+      "11.6 76.09599999999955\n",
+      "11.7 46.912999999999556\n",
+      "11.8 17.831999999999425\n",
+      "11.9 -11.141000000000076\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(10):\n",
+    "    d = 11+x*0.1\n",
+    "    print (d, d**3-30*d**2+2552)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observemos que a função muda de sinal entre $d=11.8$ e $d=11.9$, então podemos refinar a aproximação gerando alguns valores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.8 17.831999999999425\n",
+      "11.81 14.929740999999922\n",
+      "11.82 12.028567999999723\n",
+      "11.83 9.128486999999495\n",
+      "11.84 6.229503999999906\n",
+      "11.850000000000001 3.3316249999998035\n",
+      "11.860000000000001 0.43485599999894475\n",
+      "11.870000000000001 -2.4607969999997295\n",
+      "11.88 -5.355328000000554\n",
+      "11.89 -8.248731000000134\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(10):\n",
+    "    d = 11.8+x*0.01\n",
+    "    print (d, d**3-30*d**2+2552)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assim, podemos tomar como uma solução aproximada o ponto médio entre 11.86 e 11.87 que resolta em $d=11.865 cm$ com erro inferior a 0.005."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aritmética de ponto flutuante"
    ]
   },
   {
