--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -42,7 +42,7 @@
     "collapsed": true
    },
    "source": [
-    "### EXEMPLO ###\n",
+    "### EXEMPLO 1###\n",
     "Uma esfera de madeira (densidade relativa $\\mu_e =0,638$ e raio $r=10 cm$) é colocada a flutuar sobre a água (densidade relativa $\\mu=1$), conforme figura. Qual é a altura $d$ da esfera que ficará submersa? \n",
     "\n",
     "![esfera.png](https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/imagens/esfera.png\n",
@@ -192,16 +192,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aritmética de ponto flutuante"
+    "### EXEMPLO 2\n",
+    "\n",
+    "Um corpo em queda livre pode ser descrito pelo modelo matemático\n",
+    "\n",
+    "$$ \\frac{dv}{dt} = \\frac{F}{m}$$\n",
+    "\n",
+    "derivado da 2ª Lei de Newton $F=ma$. A força #F# atuante sobre o corpo composta pela soma de duas forças de mesma direção e sentidos opostos, a força gravitacional para baixo ($F_D$) e a força da resistência do ar para cima ($F_U$). Então\n",
+    "\n",
+    "$$ \\frac{dv}{dt} = \\frac{(F_D+F_U)}{m}$$\n",
+    "\n",
+    "como $F_D = mg$, com $m$ massa e $g$ aceleração da gravidade, e $F_U=-cv$, com $c$ sendo uma constante que depende das características do corpo em queda livre e $v$ a velocidade instantânea. Então\n",
+    "\n",
+    "$$ \\frac{dv}{dt} = \\frac{mg-cv}{m}$$\n",
+    "\n",
+    "ou\n",
+    "\n",
+    "$$ \\frac{dv}{dt} = g-\\frac{c}{m}v$$\n",
+    "\n",
+    "O modelo então consiste em uma equação diferencial cuja solução pode ser obtida analitivamente. Se o corpo em queda livre entrou em movimento a partir do repouso, ou seja, $v=0$ em $t=0$, a sulução analítica é dada por\n",
+    "\n",
+    "$$ v(t) = gm(1-e^{(-c/m)t})$$\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   }
  ],
