--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -106,9 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -138,9 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -194,15 +190,248 @@
     "\n",
     "$$ mantissas_+ = (b-1)^{b-1}$$\n",
     "\n",
-    "e)"
+    "e) o número máximo de expoentes possíveis é \n",
+    "\n",
+    "$$ exp_{posssíveis}=exp_{máx}-exp_{mín}+1 $$\n",
+    "\n",
+    "f) o número máximo de reais positivos é\n",
+    "\n",
+    "$$ NR_+ = mantissas_+ \\times exp_{possíveis}$$\n",
+    "\n",
+    "g) assim, considerando os números negativos e o zero, o número total de números reais exatamente representáveis é\n",
+    "\n",
+    "$$NR_t = 2\\times NR_+ + 1$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo 1\n",
+    "Tente explicar os resultados a seguir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.1 + 0.2 == 0.3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6000000000000001"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.4 + 0.2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('0.1000000000000000055511151231257827021181583404541015625')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from decimal import Decimal\n",
+    "Decimal(0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Exemplo 2\n",
+    "Em Python dispomos de algumas funções para acessar as informações do sistema de ponto flutuante:# -*- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Máximo representável: 1.7976931348623157e+308\n",
+      "Mínimo represenável: 2.2250738585072014e-308\n",
+      "Épsilon da máquina: 2.220446049250313e-16\n",
+      "Todas informações: sys.float_info(max=1.7976931348623157e+308, max_exp=1024, max_10_exp=308, min=2.2250738585072014e-308, min_exp=-1021, min_10_exp=-307, dig=15, mant_dig=53, epsilon=2.220446049250313e-16, radix=2, rounds=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys  \n",
+    "print (\"Máximo representável:\", sys.float_info.max)\n",
+    "print (\"Mínimo represenável:\", sys.float_info.min)\n",
+    "print (\"Épsilon da máquina:\", sys.float_info.epsilon)\n",
+    "print (\"Todas informações:\", sys.float_info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo 3\n",
+    "Tente explicar os resultados das operações a seguir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2 + 0.4 - 0.5 = 0.10000000000000009\n",
+      "- 0.5 + 0.4 + 0.2 = 0.10000000000000003\n",
+      "0.2 -0.1 + 0.2 - 0.1 = 0.20000000000000004\n",
+      "0.2 - 0.1 + (0.2 - 0.1) = 0.2\n",
+      "0.2 + 0.3 + 0.1 = 0.6\n",
+      "0.2 + 0.1 + 0.3 = 0.6000000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"0.2 + 0.4 - 0.5 =\", 0.2 + 0.4 - 0.5)\n",
+    "print (\"- 0.5 + 0.4 + 0.2 =\", - 0.5 + 0.4 + 0.2)\n",
+    "print (\"0.2 -0.1 + 0.2 - 0.1 =\", 0.2 -0.1 + 0.2 - 0.1)\n",
+    "print (\"0.2 - 0.1 + (0.2 - 0.1) =\", 0.2 - 0.1 + (0.2 - 0.1))\n",
+    "print (\"0.2 + 0.3 + 0.1 =\", 0.2 + 0.3 + 0.1 )\n",
+    "print (\"0.2 + 0.1 + 0.3 =\", 0.2 + 0.1 + 0.3) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo 4\n",
+    "Considere o seguinte processo iterativo\n",
+    "\n",
+    "$$x^{(1)} = \\frac{1}{3}$$\n",
+    "\n",
+    "$$x^{(n+1)} = 4x^{(n)}-1, \\,\\,\\,\\, n=1,2,...$$\n",
+    "\n",
+    "O resultado dessa sequência é \n",
+    "\n",
+    "$$x^{(1)}=x^{(2)}=x^{(3)}=...=x^{(n)}=\\frac{1}{3}$$\n",
+    "\n",
+    "Agora observe o resultado computacional. Explique."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.33333333333333326\n",
+      "0.33333333333333304\n",
+      "0.33333333333333215\n",
+      "0.3333333333333286\n",
+      "0.3333333333333144\n",
+      "0.33333333333325754\n",
+      "0.33333333333303017\n",
+      "0.3333333333321207\n",
+      "0.3333333333284827\n",
+      "0.3333333333139308\n",
+      "0.3333333332557231\n",
+      "0.3333333330228925\n",
+      "0.3333333320915699\n",
+      "0.3333333283662796\n",
+      "0.3333333134651184\n",
+      "0.33333325386047363\n",
+      "0.33333301544189453\n",
+      "0.3333320617675781\n",
+      "0.3333282470703125\n",
+      "0.33331298828125\n",
+      "0.333251953125\n",
+      "0.3330078125\n",
+      "0.33203125\n",
+      "0.328125\n",
+      "0.3125\n",
+      "0.25\n",
+      "0.0\n",
+      "-1.0\n",
+      "-5.0\n",
+      "-21.0\n",
+      "-85.0\n",
+      "-341.0\n",
+      "-1365.0\n",
+      "-5461.0\n",
+      "-21845.0\n",
+      "-87381.0\n",
+      "-349525.0\n",
+      "-1398101.0\n",
+      "-5592405.0\n",
+      "-22369621.0\n",
+      "-89478485.0\n",
+      "-357913941.0\n",
+      "-1431655765.0\n",
+      "-5726623061.0\n",
+      "-22906492245.0\n",
+      "-91625968981.0\n",
+      "-366503875925.0\n",
+      "-1466015503701.0\n",
+      "-5864062014805.0\n",
+      "-23456248059221.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1/3\n",
+    "for i in range(50):\n",
+    "    x = 4*x -1\n",
+    "    print (x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -223,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
