--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -176,15 +176,15 @@
     "\n",
     "a) o número zero é representado como:\n",
     "\n",
-    "$$ 0.000...0 \\times b^{exp_{mín}}$$\n",
+    "$$ 0.000...0 \\times b^{exp_{min}}$$\n",
     "\n",
     "b) o menor positivo exatamente representável é \n",
     "\n",
-    "$$ 0.100...0 \\times b^{exp_{mín}}$$\n",
+    "$$ 0.100...0 \\times b^{exp_{min}}$$\n",
     "\n",
     "c) o maior positivo exatamente representável é \n",
     "\n",
-    "$$ 0.(b-1)(b-1)(b-1)...(b-1) \\times b^{exp_{máx}}$$\n",
+    "$$ 0.(b-1)(b-1)(b-1)...(b-1) \\times b^{exp_{max}}$$\n",
     "\n",
     "d) o número máximo de mantissas positivas possíveis é \n",
     "\n",
@@ -192,11 +192,11 @@
     "\n",
     "e) o número máximo de expoentes possíveis é \n",
     "\n",
-    "$$ exp_{posssíveis}=exp_{máx}-exp_{mín}+1 $$\n",
+    "$$ exp_{possiveis}=exp_{max}-exp_{min}+1 $$\n",
     "\n",
     "f) o número máximo de reais positivos é\n",
     "\n",
-    "$$ NR_+ = mantissas_+ \\times exp_{possíveis}$$\n",
+    "$$ NR_+ = mantissas_+ \\times exp_{possiveis}$$\n",
     "\n",
     "g) assim, considerando os números negativos e o zero, o número total de números reais exatamente representáveis é\n",
     "\n",
