--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -106,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -136,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -168,11 +172,11 @@
     "\n",
     "O expoente $exp$ da base $b$ varia da seguinte maneira\n",
     "\n",
-    "$$ exp_{mín} \\leq exp \\leq exp_{máx}$$\n",
+    "$$ exp_{min} \\leq exp \\leq exp_{max}$$\n",
     "\n",
-    "sendo $ exp_{mín} \\leq 0 $ e $exp_{máx} \\geq 1$ com  $exp_{mín}$ e $exp_{máx}$ inteiros.\n",
+    "sendo $ exp_{min} \\leq 0 $ e $exp_{max} \\geq 1$ com  $exp_{min}$ e $exp_{max}$ inteiros.\n",
     "\n",
-    "Considerando o sistema de ponto flutuante normalizado, na forma genérica $SPF(b,n,exp_{mín}, exp_{máx})$, temos que apenas um conjunto finito de números reais podem ser exatamente representados, tal que\n",
+    "Considerando o sistema de ponto flutuante normalizado, na forma genérica $SPF(b,n,exp_{min}, exp_{max})$, temos que apenas um conjunto finito de números reais podem ser exatamente representados, tal que\n",
     "\n",
     "a) o número zero é representado como:\n",
     "\n",
@@ -214,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -234,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -254,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -285,7 +295,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -317,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +362,7 @@
     "### Exemplo 4\n",
     "Considere o seguinte processo iterativo\n",
     "\n",
-    "$$x^{(1)} = \\frac{1}{3}$$\n",
+    "$$x^{(0)} = \\frac{1}{3}$$\n",
     "\n",
     "$$x^{(n+1)} = 4x^{(n)}-1, \\,\\,\\,\\, n=1,2,...$$\n",
     "\n",
@@ -362,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -431,7 +447,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -452,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
