--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -61,21 +61,21 @@
     "\n",
     "em que $a_i \\in \\{0,1,2,3,...,(b-1)\\}$, com $n$ e $m$ inteiros.\n",
     "\n",
-    "### Base binária\n",
+    "## Base binária\n",
     "\n",
     "$$ N_2=\\sum_{i=n}^m a_ i \\times 2^i, \\,\\,\\,\\,\\ a_2 \\in \\{0,1\\}$$\n",
     "\n",
-    "**Exemplos**\n",
+    "### Exemplos\n",
     "\n",
     "a) $(1011)_2 = 1 \\times 2^0 + 1 \\times 2^1 + 0 \\times 2^2 + 1 \\times 2^3$\n",
     "\n",
     "b) $(111.01)_2 = 1 \\times 2^{-2} + 0 \\times 2^{-1} + 1 \\times 2^0 + 1 \\times 2^1 + 1 \\times 2^2 $\n",
     "\n",
-    "### Base decimal\n",
+    "## Base decimal\n",
     "\n",
     " $$ N_{10}=\\sum_{i=n}^m a_ i \\times 10^i, \\,\\,\\,\\,\\ a_{10} \\in \\{0,1,2,3,...,9 \\}$$\n",
     "\n",
-    "**Exemplos**\n",
+    "### Exemplos\n",
     "\n",
     "a) $(231)_{10} = 1 \\times 10^0 + 3 \\times 10^1 + 2 \\times 10^2$\n",
     "\n",
@@ -209,92 +209,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "### Exemplo 1\n",
-    "Tente explicar os resultados a seguir"
+    "### Exemplo\n",
+    "\n",
+    "Em Python dispomos de algumas funções para acessar as informações do sistema de ponto flutuante:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.1 + 0.2 == 0.3\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6000000000000001"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.4 + 0.2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Decimal('0.1000000000000000055511151231257827021181583404541015625')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from decimal import Decimal\n",
-    "Decimal(0.1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Exemplo 2\n",
-    "Em Python dispomos de algumas funções para acessar as informações do sistema de ponto flutuante:# -*- "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -322,13 +248,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemplo 3\n",
+    "### Exemplo\n",
+    "\n",
+    "Considere o sistema de ponto flutuante normalizado **SPF (3, 2,−1, 2)**, de base 3, 2 dígitos na mantissa, menor expoente igual a −1 e maior expoente 2.\n",
+    "\n",
+    "Para esse sistema tem-se que os números\n",
+    "\n",
+    "$$ x = \\frac{1}{9} = (0.10)_3 \\times 3^{-1} $$\n",
+    "\n",
+    "e\n",
+    "\n",
+    "$$ y = 5 = (0.12)_3 \\times 3^2 $$\n",
+    "\n",
+    "são exatamente representáveis, no entanto,\n",
+    "\n",
+    "$$ (x+y) = (0.00010)_3 \\times 3^2 + (0.12)_3 \\times 3^2 = (0.1201)_3 \\times 3^2$$\n",
+    "\n",
+    "não é exatamente representável, uma vez que a mantissa é de 2 dígitos. Nesse sistema $(x+y)=(0.12)_3 \\times 3^2$. Ou seja, $(x+y)=y$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assim, pode ocorrer de propriedades consagradas no conjunto dos números reais, como  as propriedades comutativa e associativa na adição e as propriedades comutativa e distributiva na multiplicação, não serem verdadeiras no sistema de ponto flutuante\n",
+    "\n",
+    "Por exemplo, em um sistema de ponto flutuante, base decimal, 3 dígitos e arredondamento, as seguintes operações geram **erros de arredondamento**\n",
+    "\n",
+    "Sejam $x=5.26$, $y=9.34$ e $z = 5.04$. Então:\n",
+    "\n",
+    "$$ (x+y)+z = (5.26 + 9.34) + 5.04 = 14.6 + 5.04 = 19.6 $$\n",
+    "\n",
+    "$$ x+(y+z)=5.26+(9.34+5.04)=5.26+14.4=19.7$$\n",
+    "\n",
+    "Ou seja, \n",
+    "\n",
+    "$$ x+(y+z) \\neq (x+y) +z$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo\n",
+    "\n",
     "Tente explicar os resultados das operações a seguir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +328,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemplo 4\n",
+    "### Exemplo \n",
+    "Tente explicar os resultados a seguir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.1 + 0.2 == 0.3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6000000000000001"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.4 + 0.2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('0.1000000000000000055511151231257827021181583404541015625')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from decimal import Decimal\n",
+    "Decimal(0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exemplo \n",
     "Considere o seguinte processo iterativo\n",
     "\n",
     "$$x^{(0)} = \\frac{1}{3}$$\n",
