--- a/1_INTRODUCAO_ERROS/1.3_erros_absolutos_e_relativos.ipynb
+++ b/1_INTRODUCAO_ERROS/1.3_erros_absolutos_e_relativos.ipynb
@@ -8,6 +8,22 @@
    "source": [
     "# 1.3 Erros absolutos e relativos\n",
     "\n",
+    "\n",
+    "### Erro absoluto\n",
+    "Definimos erro absoluto por\n",
+    "\n",
+    "$$ E_{abs} = \\left| a_{ex} − a_{aprox} \\right| $$\n",
+    "\n",
+    "em que $a_{ex}$ é o valor exato da grandeza considerada e $a_{aprox}$ é o valor aproximado da mesma grandeza numérica.\n",
+    "\n",
+    "### Erro relativo \n",
+    "Definimos erro relativo por\n",
+    "\n",
+    "$$ E_{rel} = \\frac{E_{abs} }{\\left| a_{ex} \\right|} $$\n",
+    "\n",
+    "em que $a_{ex}$ é o valor exato da grandeza considerada e $a_{aprox}$ é o valor aproximado da mesma grandeza.\n",
+    "\n",
+    "Podemos observar que o erro relativo nos fornece mais informações sobre a qua- lidade do erro que estamos cometendo num determinado cálculo, uma vez que no erro absoluto não é levada em consideração a ordem de grandeza do valor calculado, enquanto no erro relativo esta ordem é contemplada.\n",
     "\n"
    ]
   },
