--- a/1_INTRODUCAO_ERROS/1.3_erros_absolutos_e_relativos.ipynb
+++ b/1_INTRODUCAO_ERROS/1.3_erros_absolutos_e_relativos.ipynb
@@ -12,7 +12,7 @@
     "### Erro absoluto\n",
     "Definimos erro absoluto por\n",
     "\n",
-    "$$ E_{abs} = \\left| a_{ex} − a_{aprox} \\right| $$\n",
+    "$$ E_{abs} = \\left| a_{ex}-a_{aprox} \\right| $$\n",
     "\n",
     "em que $a_{ex}$ é o valor exato da grandeza considerada e $a_{aprox}$ é o valor aproximado da mesma grandeza numérica.\n",
     "\n",
